# fraud-ia

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  README.md  package-lock.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: aggregation_agent.py  arbiter_agent.py  base.py  behavioral_agent.py  context_agent.py  debate_agent.py  explainability_agent.py  rag_agent.py  web_intel_agent.py
backend/app/api/routes/: audit.py  evaluations.py  health.py  hitl.py  simulator.py  transactions.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/domain/: llm_context.py  merchant_risk.py  models.py  risk_score.py  signals.py  simulator_variations.py  transaction_context.py
backend/app/infrastructure/customers/: customer_store.py
backend/app/infrastructure/devices/: device_store.py
backend/app/infrastructure/llm/: client.py  prompts.py  (+1 more)
backend/app/models/: schemas.py
backend/app/orchestrator/: pipeline.py  state.py
backend/app/repositories/: mongo_repositories.py
backend/app/services/: fraud_service.py  simulator_service.py
backend/scripts/: reevaluate_demo.py  reset_evaluations.py  seed_data.py  validate_ollama.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_evaluate_pending.py  test_ollama_live.py  test_simulator.py
backend/tests/unit/: test_demo_decisions.py  test_llm_client.py  test_llm_context.py  test_llm_fallbacks.py  test_policy_store.py  test_risk_score.py  test_signals.py  test_simulator_variations.py  test_transaction_context.py
(+102 files in other folders)
